@@ -1,3 +1,8 @@
+2015-01-29  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* message.el (message-smtpmail-send-it): Remove the mail header
+	separator before sending.
+
 2015-01-28  Elias Oltmanns  <eo@nebensachen.de>
 
 	* nnimap.el (nnimap-find-expired-articles): Fix handling of
